src/test/ui/span/issue-33884.stderr
error[E0308]: mismatched types
  --> $DIR/issue-33884.rs:8:22
   |
LL |     stream.write_fmt(format!("message received"))
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected struct `std::fmt::Arguments`, found struct `std::string::String`
   |
   = note: expected type `std::fmt::Arguments<'_>`
              found type `std::string::String`
   = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
